# meta

./: .gitignore  AGENTS.md  Carbone.lean  Meta.lean  MetaCore_Reorganisation_Plan.md  README.md  Reparation_certifiee_representations_latentes-4.md  Systeme_dynamique_bilateral.md  lake-manifest.json  lakefile.toml
Arithmetic/: Core.lean  (+9 more)
v23_full_campaign_implementation/: .gitignore  CUDA_SMOKE.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  PROTOCOL_CONTRACT.md  README.md  RUNBOOK.md  assign_resources_v23.py  audit_information_flow_v23.py  audit_scientific_contract_v23.py  benchmark_resources_v23.py  build_data_manifest_v23.py  campaign_v23.py  certifiable_agent_v23.py  certify_causality_v23.py  certify_dynamics_v23.py  certify_information_v23.py  certify_quantized_v23.py  compute_stats_v23.py  evaluate_v23.py  export_onnx_v23.py  falsify_verifiers_v23.py  freeze_and_run_v23.py  generate_lean_v23.py  lake-manifest.json  lakefile.toml  protocol.lock.json  pyproject.toml  requirements-smoke-cuda.txt  run_interventions_v23.py  seal_ood_v23.py  setup_smoke_cuda_v23.sh  smoke_cuda_causal_gradient_v3.py  smoke_cuda_v23.py  smoke_cuda_v23_v2.py  train_v23.py  verify_causality_v23.py  verify_dynamics_v23.py  verify_v23.py
v23_full_campaign_implementation/configs/: exclusions.json  final.json  preflight.json  tuning.json
v23_full_campaign_implementation/lean/: V23.lean
v23_full_campaign_implementation/schemas/: run_manifest.schema.json  trace.schema.json
v23_full_campaign_implementation/tests/: test_core.py  test_cuda_sampling_v2.py  test_protocol.py  test_training.py
(+991 files in other folders)
